# bazel-deps-in-cmake

./: .gitignore  BUILD.bazel  CMakeLists.txt  README.md  WORKSPACE  bazel_query_sources.sh  main.cpp
codegen/: BUILD.bazel  rules.bzl
