package(default_visibility = ["//visibility:public"])

genrule(
    name = "some_bazel_target",
    outs = [
        "generated.hpp",
        "generated.cpp",
    ],
    cmd = """
printf '
#pragma once

#include <string>

struct Generated {
    static std::string theWord;
};
' > $(execpath :generated.hpp)

printf '
#include "generated.hpp"

std::string Generated::theWord{"bird"};
' > $(execpath :generated.cpp)

""",
)
