package(default_visibility = ["//visibility:public"])

load(":rules.bzl", "gen_source")

gen_source(
    name = "generated",
    srcs = ["generated_word.txt"],
    outs = [
        "generated.cpp",
        "generated.hpp",
    ],
    cmd = """
printf '
#pragma once

#include <string>

struct Generated {
    static std::string theWord;
};
' > $(execpath :generated.hpp)

printf '
#include "generated.hpp"

std::string Generated::theWord{"%s"};
' $$(cat $(execpath generated_word.txt)) > $(execpath :generated.cpp)

""",
)
